--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://aliu19.github.io/bookify",
+  "homepage": "https://aliu19.github.io/wbdv-sp21-bookify",
   "name": "wbdv-sp21-vibeify",
   "version": "0.1.0",
   "private": true,
